--- a/front end/index.html
+++ b/front end/index.html
@@ -75,9 +75,9 @@
         </div>
 
         <div v-else>
-            <div class="container">
+            <div>
                 <div class="forms-container">
-                    <div class="signin-signup">
+                    <div>
                         <form v-on:submit="submitURLShorten" class="sign-in-form">
                             <h2 class="title">Enter the URL</h2>
                             <div class="input-field">
